本地化资源更新与代码优化
在多个文件中，将硬编码的中文字符串替换为资源文件中的静态资源引用，以支持多语言本地化。具体更改包括：
- 在 `HomePage.xaml` 和 `HomePage.xaml.cs` 中，使用资源文件中的静态资源引用替换硬编码字符串。
- 在 `Resources.Designer.cs` 中，添加和删除了一些本地化字符串属性。
- 在多个 `.resx` 文件中，添加了新的本地化字符串条目。
- 在 `TemplateFlow.cs` 和 `TemplateEditorWindow.xaml` 中，更新了属性和文本以使用资源文件中的静态资源引用。

--- a/Engine/ColorVision.Engine/Properties/Resources.en.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.en.resx
@@ -553,7 +553,7 @@
     <value>Export</value>
   </data>
   <data name="ExecutionProcess" xml:space="preserve">
-    <value>Implementation process</value>
+    <value> Execution Flow</value>
   </data>
   <data name="Exchange" xml:space="preserve">
     <value>Exchange</value>
@@ -1103,5 +1103,26 @@
   </data>
   <data name="LightBandDetection" xml:space="preserve">
     <value>LED strip testing</value>
+  </data>
+  <data name="IntegratedQuery" xml:space="preserve">
+    <value>Comprehensive Inquiry</value>
+  </data>
+  <data name="ArchiveQuery" xml:space="preserve">
+    <value>Archive Query</value>
+  </data>
+  <data name="MoveUp" xml:space="preserve">
+    <value>Move up</value>
+  </data>
+  <data name="MoveDown" xml:space="preserve">
+    <value>Move down</value>
+  </data>
+  <data name="CreateCopy" xml:space="preserve">
+    <value>Create a copy</value>
+  </data>
+  <data name="CreateSample" xml:space="preserve">
+    <value>Create as a sample</value>
+  </data>
+  <data name="WorkflowEngineTemplateManagement" xml:space="preserve">
+    <value>Workflow Engine Template Management</value>
   </data>
 </root>
