--- a/Engine/ColorVision.Engine/Properties/Resources.ru.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.ru.resx
@@ -1104,4 +1104,25 @@
   <data name="LightBandDetection" xml:space="preserve">
     <value>Тестирование светодиодных лент</value>
   </data>
+  <data name="IntegratedQuery" xml:space="preserve">
+    <value>Комплексное расследование</value>
+  </data>
+  <data name="ArchiveQuery" xml:space="preserve">
+    <value>Архивный запрос</value>
+  </data>
+  <data name="MoveUp" xml:space="preserve">
+    <value>Двигаться вверх</value>
+  </data>
+  <data name="MoveDown" xml:space="preserve">
+    <value>Двигаться вниз</value>
+  </data>
+  <data name="CreateCopy" xml:space="preserve">
+    <value>Создать копию</value>
+  </data>
+  <data name="CreateSample" xml:space="preserve">
+    <value>Создать как образец</value>
+  </data>
+  <data name="WorkflowEngineTemplateManagement" xml:space="preserve">
+    <value>Управление шаблонами Workflow Engine</value>
+  </data>
 </root>
