--- a/Engine/ColorVision.Engine/Properties/Resources.zh-Hant.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.zh-Hant.resx
@@ -1104,4 +1104,25 @@
   <data name="LightBandDetection" xml:space="preserve">
     <value>燈帶檢測</value>
   </data>
+  <data name="IntegratedQuery" xml:space="preserve">
+    <value>綜合查詢</value>
+  </data>
+  <data name="ArchiveQuery" xml:space="preserve">
+    <value>歸檔查詢</value>
+  </data>
+  <data name="MoveUp" xml:space="preserve">
+    <value>上移</value>
+  </data>
+  <data name="MoveDown" xml:space="preserve">
+    <value>下移</value>
+  </data>
+  <data name="CreateCopy" xml:space="preserve">
+    <value>建立副本</value>
+  </data>
+  <data name="CreateSample" xml:space="preserve">
+    <value>創建為範例</value>
+  </data>
+  <data name="WorkflowEngineTemplateManagement" xml:space="preserve">
+    <value>流程引擎範本管理</value>
+  </data>
 </root>
