本地化字符串更新和UI文本替换
在 `EngineCommands.cs` 中，将菜单项标题从硬编码字符串更改为使用资源文件中的本地化字符串，包括“开始执行”、“停止执行”和“拍照”等命令。

在 `Resources.Designer.cs` 中，添加了多个新的本地化字符串资源，如“Connect”、“CreateCopy”、“CreateSample”、“MoveDown”、“MoveUp”、“PhysicalCamera”、“SetSnFirst”、“StartExecition”和“StopExecution”等。

在 `Resources.en.resx`、`Resources.fr.resx`、`Resources.ja.resx`、`Resources.ko.resx`、`Resources.resx`、`Resources.ru.resx` 和 `Resources.zh-Hant.resx` 中，添加了相应的本地化字符串，以支持多语言显示。

在 `EditCamera.xaml`、`DisplayCfwPort.xaml` 和 `EditFlowDevice.xaml` 中，将硬编码的 UI 文本替换为使用资源文件中的本地化字符串，以提高可维护性和国际化支持。

--- a/Engine/ColorVision.Engine/Properties/Resources.en.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.en.resx
@@ -1125,4 +1125,22 @@
   <data name="WorkflowEngineTemplateManagement" xml:space="preserve">
     <value>Workflow Engine Template Management</value>
   </data>
+  <data name="PhysicalCamera" xml:space="preserve">
+    <value>Physical Camera Code</value>
+  </data>
+  <data name="SetSnFirst" xml:space="preserve">
+    <value>Please configure SN first.</value>
+  </data>
+  <data name="Connect" xml:space="preserve">
+    <value>connect</value>
+  </data>
+  <data name="StartExecition" xml:space="preserve">
+    <value>Start execution</value>
+  </data>
+  <data name="StopExecution" xml:space="preserve">
+    <value>Stop execution</value>
+  </data>
+  <data name="CaptureImage" xml:space="preserve">
+    <value>CaptureImage</value>
+  </data>
 </root>
