--- a/Engine/ColorVision.Engine/Properties/Resources.ko.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.ko.resx
@@ -1125,4 +1125,22 @@
   <data name="WorkflowEngineTemplateManagement" xml:space="preserve">
     <value>워크플로 엔진 템플릿 관리</value>
   </data>
+  <data name="PhysicalCamera" xml:space="preserve">
+    <value>물리적 카메라 코드</value>
+  </data>
+  <data name="SetSnFirst" xml:space="preserve">
+    <value>먼저 SN을 구성하세요.</value>
+  </data>
+  <data name="Connect" xml:space="preserve">
+    <value>연결하다</value>
+  </data>
+  <data name="StartExecition" xml:space="preserve">
+    <value>실행 시작</value>
+  </data>
+  <data name="StopExecution" xml:space="preserve">
+    <value>실행 중지</value>
+  </data>
+  <data name="CaptureImage" xml:space="preserve">
+    <value>사진</value>
+  </data>
 </root>
