--- a/Engine/ColorVision.Engine/Properties/Resources.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.resx
@@ -1125,4 +1125,22 @@
   <data name="WorkflowEngineTemplateManagement" xml:space="preserve">
     <value>流程引擎模板管理</value>
   </data>
+  <data name="PhysicalCamera" xml:space="preserve">
+    <value>物理相机Code</value>
+  </data>
+  <data name="SetSnFirst" xml:space="preserve">
+    <value>请先配置SN</value>
+  </data>
+  <data name="Connect" xml:space="preserve">
+    <value>连接</value>
+  </data>
+  <data name="StartExecition" xml:space="preserve">
+    <value>开始执行</value>
+  </data>
+  <data name="StopExecution" xml:space="preserve">
+    <value>停止执行</value>
+  </data>
+  <data name="CaptureImage" xml:space="preserve">
+    <value>拍照</value>
+  </data>
 </root>
