--- a/UI/ColorVision.Database/Properties/Resources.resx
+++ b/UI/ColorVision.Database/Properties/Resources.resx
@@ -142,4 +142,7 @@
   <data name="Cancel" xml:space="preserve">
     <value>取消</value>
   </data>
+  <data name="LogDatabase" xml:space="preserve">
+    <value>日志数据库</value>
+  </data>
 </root>
