--- a/Engine/ColorVision.Engine/Properties/Resources.ko.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.ko.resx
@@ -1143,4 +1143,91 @@
   <data name="CaptureImage" xml:space="preserve">
     <value>사진</value>
   </data>
+  <data name="SeviceClosed" xml:space="preserve">
+    <value>서비스가 중단되었습니다.</value>
+  </data>
+  <data name="DataDirectoryServiceConfig" xml:space="preserve">
+    <value>데이터 디렉토리 서비스 구성</value>
+  </data>
+  <data name="ServiceCach" xml:space="preserve">
+    <value>서비스 캐싱</value>
+  </data>
+  <data name="ConfigerInfo" xml:space="preserve">
+    <value>구성 정보</value>
+  </data>
+  <data name="FileDirectory" xml:space="preserve">
+    <value>파일 디렉토리</value>
+  </data>
+  <data name="Aperture" xml:space="preserve">
+    <value>조리개 F</value>
+  </data>
+  <data name="DataBaseConfig1" xml:space="preserve">
+    <value>데이터베이스 구성(구성이 실패하는 경우)</value>
+  </data>
+  <data name="offline" xml:space="preserve">
+    <value>오프라인</value>
+  </data>
+  <data name="CommunicationType" xml:space="preserve">
+    <value>의사소통 방법</value>
+  </data>
+  <data name="CategoryModel" xml:space="preserve">
+    <value>카테고리 모델</value>
+  </data>
+  <data name="SerialPortCom" xml:space="preserve">
+    <value>직렬 통신</value>
+  </data>
+  <data name="PowerOn" xml:space="preserve">
+    <value>전원 켜기</value>
+  </data>
+  <data name="PowerOff" xml:space="preserve">
+    <value>전원 끄기</value>
+  </data>
+  <data name="Up" xml:space="preserve">
+    <value>우수한</value>
+  </data>
+  <data name="Down" xml:space="preserve">
+    <value>아래에</value>
+  </data>
+  <data name="Switch" xml:space="preserve">
+    <value>스위치</value>
+  </data>
+  <data name="PGCommand" xml:space="preserve">
+    <value>화면 명령</value>
+  </data>
+  <data name="Unregistered" xml:space="preserve">
+    <value>등록되지 않음</value>
+  </data>
+  <data name="ExecteTemplate" xml:space="preserve">
+    <value>실행 템플릿</value>
+  </data>
+  <data name="CommandType" xml:space="preserve">
+    <value>지시 유형</value>
+  </data>
+  <data name="SendCmd" xml:space="preserve">
+    <value>명령 보내기</value>
+  </data>
+  <data name="RevCmd" xml:space="preserve">
+    <value>반환 지침</value>
+  </data>
+  <data name="SensorCfgInfo" xml:space="preserve">
+    <value>센서 구성 정보</value>
+  </data>
+  <data name="IPAddress" xml:space="preserve">
+    <value>IP 주소</value>
+  </data>
+  <data name="Serial" xml:space="preserve">
+    <value>직렬 포트</value>
+  </data>
+  <data name="BaudRate" xml:space="preserve">
+    <value>전송 속도</value>
+  </data>
+  <data name="DeviceType" xml:space="preserve">
+    <value>장비 유형</value>
+  </data>
+  <data name="DeviceAddr" xml:space="preserve">
+    <value>장치 주소</value>
+  </data>
+  <data name="SMUAddr" xml:space="preserve">
+    <value>소스 테이블 주소</value>
+  </data>
 </root>
