--- a/Engine/ColorVision.Engine/Properties/Resources.ru.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.ru.resx
@@ -1143,4 +1143,91 @@
   <data name="CaptureImage" xml:space="preserve">
     <value>Фотография</value>
   </data>
+  <data name="SeviceClosed" xml:space="preserve">
+    <value>Служба была закрыта.</value>
+  </data>
+  <data name="DataDirectoryServiceConfig" xml:space="preserve">
+    <value>Конфигурация службы каталогов данных</value>
+  </data>
+  <data name="ServiceCach" xml:space="preserve">
+    <value>Кэширование сервисов</value>
+  </data>
+  <data name="ConfigerInfo" xml:space="preserve">
+    <value>Информация о конфигурации</value>
+  </data>
+  <data name="FileDirectory" xml:space="preserve">
+    <value>Каталог файлов</value>
+  </data>
+  <data name="Aperture" xml:space="preserve">
+    <value>Диафрагма F</value>
+  </data>
+  <data name="DataBaseConfig1" xml:space="preserve">
+    <value>Конфигурация базы данных (если конфигурация не удалась)</value>
+  </data>
+  <data name="offline" xml:space="preserve">
+    <value>Оффлайн</value>
+  </data>
+  <data name="CommunicationType" xml:space="preserve">
+    <value>Методы коммуникации</value>
+  </data>
+  <data name="CategoryModel" xml:space="preserve">
+    <value>Модель категории</value>
+  </data>
+  <data name="SerialPortCom" xml:space="preserve">
+    <value>Последовательная связь</value>
+  </data>
+  <data name="PowerOn" xml:space="preserve">
+    <value>Включить питание</value>
+  </data>
+  <data name="PowerOff" xml:space="preserve">
+    <value>Выключить питание</value>
+  </data>
+  <data name="Up" xml:space="preserve">
+    <value>начальство</value>
+  </data>
+  <data name="Down" xml:space="preserve">
+    <value>Вниз</value>
+  </data>
+  <data name="Switch" xml:space="preserve">
+    <value>Выключатель</value>
+  </data>
+  <data name="PGCommand" xml:space="preserve">
+    <value>Экранные команды</value>
+  </data>
+  <data name="Unregistered" xml:space="preserve">
+    <value>Незарегистрированный</value>
+  </data>
+  <data name="ExecteTemplate" xml:space="preserve">
+    <value>Шаблон исполнения</value>
+  </data>
+  <data name="CommandType" xml:space="preserve">
+    <value>Тип инструкции</value>
+  </data>
+  <data name="SendCmd" xml:space="preserve">
+    <value>Отправить команду</value>
+  </data>
+  <data name="RevCmd" xml:space="preserve">
+    <value>Инструкция по возврату</value>
+  </data>
+  <data name="SensorCfgInfo" xml:space="preserve">
+    <value>Информация о конфигурации датчика</value>
+  </data>
+  <data name="IPAddress" xml:space="preserve">
+    <value>IP-адрес</value>
+  </data>
+  <data name="Serial" xml:space="preserve">
+    <value>последовательный порт</value>
+  </data>
+  <data name="BaudRate" xml:space="preserve">
+    <value>скорость передачи данных</value>
+  </data>
+  <data name="DeviceType" xml:space="preserve">
+    <value>Тип оборудования</value>
+  </data>
+  <data name="DeviceAddr" xml:space="preserve">
+    <value>Адрес устройства</value>
+  </data>
+  <data name="SMUAddr" xml:space="preserve">
+    <value>Адрес исходной таблицы</value>
+  </data>
 </root>
