--- a/Engine/ColorVision.Engine/Properties/Resources.zh-Hant.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.zh-Hant.resx
@@ -1143,4 +1143,91 @@
   <data name="CaptureImage" xml:space="preserve">
     <value>拍照</value>
   </data>
+  <data name="SeviceClosed" xml:space="preserve">
+    <value>服務已關閉</value>
+  </data>
+  <data name="DataDirectoryServiceConfig" xml:space="preserve">
+    <value>資料目錄服務配置</value>
+  </data>
+  <data name="ServiceCach" xml:space="preserve">
+    <value>服務快取</value>
+  </data>
+  <data name="ConfigerInfo" xml:space="preserve">
+    <value>配置資訊</value>
+  </data>
+  <data name="FileDirectory" xml:space="preserve">
+    <value>檔案目錄</value>
+  </data>
+  <data name="Aperture" xml:space="preserve">
+    <value>光圈F</value>
+  </data>
+  <data name="DataBaseConfig1" xml:space="preserve">
+    <value>資料庫配置(如果出現無法配置的情況)</value>
+  </data>
+  <data name="offline" xml:space="preserve">
+    <value>離線</value>
+  </data>
+  <data name="CommunicationType" xml:space="preserve">
+    <value>通訊方式</value>
+  </data>
+  <data name="CategoryModel" xml:space="preserve">
+    <value>類別型號</value>
+  </data>
+  <data name="SerialPortCom" xml:space="preserve">
+    <value>串口通訊</value>
+  </data>
+  <data name="PowerOn" xml:space="preserve">
+    <value>上電</value>
+  </data>
+  <data name="PowerOff" xml:space="preserve">
+    <value>下電</value>
+  </data>
+  <data name="Up" xml:space="preserve">
+    <value>上</value>
+  </data>
+  <data name="Down" xml:space="preserve">
+    <value>下</value>
+  </data>
+  <data name="Switch" xml:space="preserve">
+    <value>切換</value>
+  </data>
+  <data name="PGCommand" xml:space="preserve">
+    <value>畫面指令</value>
+  </data>
+  <data name="Unregistered" xml:space="preserve">
+    <value>未註冊</value>
+  </data>
+  <data name="ExecteTemplate" xml:space="preserve">
+    <value>執行模板</value>
+  </data>
+  <data name="CommandType" xml:space="preserve">
+    <value>指令類型</value>
+  </data>
+  <data name="SendCmd" xml:space="preserve">
+    <value>發送指令</value>
+  </data>
+  <data name="RevCmd" xml:space="preserve">
+    <value>返回指令</value>
+  </data>
+  <data name="SensorCfgInfo" xml:space="preserve">
+    <value>感測器配置資訊</value>
+  </data>
+  <data name="IPAddress" xml:space="preserve">
+    <value>IP位址</value>
+  </data>
+  <data name="Serial" xml:space="preserve">
+    <value>串口</value>
+  </data>
+  <data name="BaudRate" xml:space="preserve">
+    <value>波特率</value>
+  </data>
+  <data name="DeviceType" xml:space="preserve">
+    <value>設備類型</value>
+  </data>
+  <data name="DeviceAddr" xml:space="preserve">
+    <value>設備位址</value>
+  </data>
+  <data name="SMUAddr" xml:space="preserve">
+    <value>來源表位址</value>
+  </data>
 </root>
